--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseurl = "https://utscyberblogexample.netlify.com/"
-title = "Cool Dog Guy"
+baseurl = "https://ryliet.netlify.app/"
+title = "Rylie"
 
 theme = "hugo-coder"
 
