--- a/config.toml
+++ b/config.toml
@@ -17,19 +17,19 @@ pygmentscodefencesguesssyntax = true
 # disqusShortname = "yourdiscussshortname"
 
 [params]
-    author = "Cool Dogs Guy"
+    author = "Rylie T"
     description = "Cool Dog Guy's Personal Website"
-    keywords = "blog,developer,personal,hacker,student"
-    info = "Dog Enthuasiast and student"
-    avatarurl = "images/me.jpg"
+    keywords = "IT student, developer, student"
+    info = "Penultimate IT student"
+    avatarurl = "images/polarbear.jpg"
     #gravatar = "john.doe@example.com"
-    footercontent = ""
+    footercontent = "Hello~"
 
     dateformat = "2 January, 2006"
 
     hideCredits = false
     hideCopyright = false
-    since = 2020
+    since = 2021
 
     # Git Commit in Footer, uncomment the line below to enable it.
     commit = "https://github.com/luizdepra/hugo-coder/tree/"
@@ -64,20 +64,24 @@ pygmentscodefencesguesssyntax = true
   tag = "tags"
 
 [[params.social]]
-    name = "Github"
-    icon = "fab fa-github"
+    name = "Email"
+    icon = "fas fa-envelope"
     weight = 1
-    url = "https://github.com/CoolDogGuy/"
-[[params.social]]
-    name = "Twitter"
-    icon = "fab fa-twitter"
-    weight = 3
-    url = "https://twitter.com/johndoe/"
+    url = "ryleetsang@gmail.com" 
+
 [[params.social]]
     name = "LinkedIn"
     icon = "fab fa-linkedin-in"
-    weight = 4
-    url = "https://www.linkedin.com/in/johndoe/"
+    weight = 2
+    url = "https://www.linkedin.com/in/ryliet/"
+
+[[params.social]]
+    name = "Github"
+    icon = "fab fa-github"
+    weight = 3
+    url = "https://github.com/Rrrrly"
+
+
 
 [languages]
     [languages.en]
@@ -86,45 +90,21 @@ pygmentscodefencesguesssyntax = true
         [languages.en.menu]
 
             [[languages.en.menu.main]]
+            name = "Home"
+            weight = 1
+            url = "#"
+
+            [[languages.en.menu.main]]
             name = "About"
-            weight = 1
+            weight = 2
             url = "about/"
 
             [[languages.en.menu.main]]
             name = "Blog"
-            weight = 2
+            weight = 3
             url = "posts/"
 
             [[languages.en.menu.main]]
-            name = "Contact"
-            weight = 5
-            url = "contact/"
-
-
-    [languages.pt-br]
-        languagename = "Português"
-        title = "João Ninguém"
-
-        [languages.pt-br.params]
-            author = "João Ninguém"
-            info = "Full Stack DevOps e Mágico"
-            description = "Sítio pessoal de João Ninguém"
-            keywords = "blog,desenvolvedor,pessoal"
-            footercontent = "Coloque algum texto aqui."
-
-        [languages.pt-br.menu]
-
-            [[languages.pt-br.menu.main]]
-            name = "Sobre"
-            weight = 1
-            url = "about/"
-
-            [[languages.pt-br.menu.main]]
-            name = "Blog"
-            weight = 2
-            url = "posts/"
-
-            [[languages.pt-br.menu.main]]
-            name = "Contato"
-            weight = 5
-            url = "contact/"
+            name = "Experience"
+            weight = 4
+            url = "experience/"
